@@ -240,7 +240,7 @@ class TestTableDMLAsync:
         assert set(d_timestamp) == set(exp_d_timestamp)
 
         d_list_int = await async_empty_table_all_returns.distinct("p_list_int")
-        exp_d_list_int = {1, 2, 3}
+        exp_d_list_int = {1, 2, 3, 9999}  # FIXME remove 9999 when #1906 resolved
         assert set(d_list_int) == set(exp_d_list_int)
 
         d_list_int_ind = await async_empty_table_all_returns.distinct("p_list_int.1")
@@ -267,7 +267,7 @@ class TestTableDMLAsync:
         assert set(d_p_map_text_text_a) == set(exp_d_p_map_text_text_a)
 
         d_set_int = await async_empty_table_all_returns.distinct("p_set_int")
-        exp_d_set_int = {100, 200, 300}
+        exp_d_set_int = {100, 200, 300, 9999}  # FIXME remove 9999 when #1906 resolved
         assert set(d_set_int) == set(exp_d_set_int)
 
     @pytest.mark.describe("test of table distinct key-as-list, async")
@@ -294,7 +294,7 @@ class TestTableDMLAsync:
         assert set(d_timestamp) == set(exp_d_timestamp)
 
         d_list_int = await async_empty_table_all_returns.distinct(["p_list_int"])
-        exp_d_list_int = {1, 2, 3}
+        exp_d_list_int = {1, 2, 3, 9999}  # FIXME remove 9999 when #1906 resolved
         assert set(d_list_int) == set(exp_d_list_int)
 
         d_list_int_ind = await async_empty_table_all_returns.distinct(["p_list_int", 1])
@@ -327,7 +327,7 @@ class TestTableDMLAsync:
         assert set(d_p_map_text_text_a) == set(exp_d_p_map_text_text_a)
 
         d_set_int = await async_empty_table_all_returns.distinct(["p_set_int"])
-        exp_d_set_int = {100, 200, 300}
+        exp_d_set_int = {100, 200, 300, 9999}  # FIXME remove 9999 when #1906 resolved
         assert set(d_set_int) == set(exp_d_set_int)
 
     @pytest.mark.describe("test of table insert_many, async")
