@@ -1,5 +1,8 @@
 main
 ====
+Maps for tables expressed as list of pairs (association lists):
+    - support for automatic handling of dicts and DataAPIMaps in the proper table payload portions
+    - introduced serdes option `encode_maps_as_lists_in_tables` (default to False) to control
 Exceptions
     - `DataAPIResponseException.error_descriptors` is a property (computed from detailed_error_descriptors)
     - better string representation of `DataAPIDetailedErrorDescriptor`
